--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mobx-react": "^5.4.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-app-rewired": "^2.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -30,7 +31,6 @@
   ],
   "devDependencies": {
     "customize-cra": "^0.2.12",
-    "react-app-rewired": "^2.1.1",
     "babel-eslint": "^9.0.0",
     "@babel/plugin-proposal-decorators": "^7.4.0"
   }
