--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "react-app-rewired": "^2.1.1"
+    "serve": "^11.0.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "serve -s build",
+    "dev": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
@@ -31,6 +32,7 @@
   ],
   "devDependencies": {
     "customize-cra": "^0.2.12",
+    "react-app-rewired": "^2.1.1",
     "babel-eslint": "^9.0.0",
     "@babel/plugin-proposal-decorators": "^7.4.0"
   }
