--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm": "6.9.0"
   },
   "dependencies": {
+    "auth0-js": "^9.10.2",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "react": "^16.8.6",
