--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
+    "dotenv": "^8.0.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "react": "^16.8.6",
@@ -19,8 +20,8 @@
     "serve": "^11.0.0"
   },
   "scripts": {
-    "start": "serve -s build",
-    "dev": "react-app-rewired start",
+    "start": "REACT_APP_ENV=prod serve -s build",
+    "dev": "REACT_APP_ENV=dev react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
