--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm": "6.9.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.0.0",
     "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
     "dotenv": "^8.0.0",
