feat(): set .env api url to dev and prod

--- a/.env.prod
+++ b/.env.prod
@@ -1,1 +1,2 @@
 REACT_APP_AUTH_CALLBACK_URI=https://eventos-grupog-front.herokuapp.com/auth
+REACT_APP_API_URL=https://eventos-grupog.herokuapp.com/
