refactor(): send entire endpoint without concat

--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,4 @@
 REACT_APP_AUTH_CALLBACK_URI=https://eventos-grupog-front.herokuapp.com/auth
 REACT_APP_API_URL=https://eventos-grupog.herokuapp.com
+REACT_APP_USER_ALL=https://eventos-grupog.herokuapp.com/user/all
+
