--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@material-ui/icons": "^4.0.0",
     "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
+    "clsx": "^1.0.4",
     "dotenv": "^8.0.0",
+    "history": "^4.9.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "mobx-react-lite": "^1.3.2",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
@@ -30,10 +33,9 @@
     "dev": "NODE_ENV=dev react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "lint": "eslint src",
+    "lint:fix": "npm run lint -- --fix"
   },
   "browserslist": [
     ">0.2%",
@@ -45,6 +47,12 @@
     "customize-cra": "^0.2.12",
     "react-app-rewired": "^2.1.1",
     "babel-eslint": "^9.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-no-only-tests": "^2.3.0",
+    "eslint-plugin-react": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.4.0"
   }
 }
