--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mobx-react": "^5.4.3",
     "mobx-react-lite": "^1.3.2",
     "prop-types": "^15.7.2",
+    "query-string": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
@@ -26,7 +27,8 @@
     "react-select": "^2.4.3",
     "react-slick": "^0.24.0",
     "serve": "^11.0.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "universal-cookie": "^4.0.0"
   },
   "scripts": {
     "start": "NODE_ENV=prod serve -s build",
