--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
     "clsx": "^1.0.4",
+    "detect-browser-language": "0.0.2",
     "dotenv": "^8.0.0",
     "history": "^4.9.0",
+    "i18next": "^17.0.4",
+    "i18next-browser-languagedetector": "^3.0.1",
+    "i18next-xhr-backend": "^3.0.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "mobx-react-lite": "^1.3.2",
@@ -21,6 +25,7 @@
     "query-string": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-i18next": "^10.11.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
