--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "mobx-react-lite": "^1.3.2",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.7.0",
     "react": "^16.8.6",
+    "react-credit-cards": "^0.7.0",
     "react-dom": "^16.8.6",
     "react-i18next": "^10.11.2",
     "react-router": "^5.0.0",
