--- a/package.json
+++ b/package.json
@@ -53,15 +53,16 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "customize-cra": "^0.2.12",
-    "react-app-rewired": "^2.1.1",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
     "babel-eslint": "^9.0.0",
+    "customize-cra": "^0.2.12",
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-no-only-tests": "^2.3.0",
     "eslint-plugin-react": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.4.0"
+    "react-app-rewired": "^2.1.1",
+    "webpack-cli": "^3.3.5"
   }
 }
