--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^1.0.4",
     "detect-browser-language": "0.0.2",
     "dotenv": "^8.0.0",
+    "generate-changelog": "^1.8.0",
     "history": "^4.9.0",
     "i18next": "^17.0.4",
     "i18next-browser-languagedetector": "^3.0.1",
